# 3DShapeSynthesis

./: CMakeLists.txt  README.md
src/: control_points.cpp  control_points.h  data.cpp  data.h  face.cpp  main.cpp  mix_match.cpp  mix_match.h  part.cpp  part_intersection.cpp  region.cpp  smf_parser.cpp  smf_parser.h  utils.cpp  utils.h  vertex.cpp  winged_edge.cpp
src/control_points/: box_intersection_points.cpp  box_intersection_points.h  box_intersection_target_points.cpp  box_intersection_target_points.h  closest_connecting_points.cpp  closest_connecting_points.h  eight_points.cpp  eight_points.h  hull_grid_points.cpp  hull_grid_points.h  hull_grid_rays.cpp  hull_grid_rays.h  missing_connecting_points.cpp  missing_connecting_points.h
src/mixers/: box_intersection_points.cpp  box_intersection_points.h  closest_connecting_points.cpp  closest_connecting_points.h  eight_points.cpp  eight_points.h  hull_grid_points.cpp  hull_grid_points.h  intersection_box.cpp  intersection_box.h  knn_weighted_interpolation.cpp  knn_weighted_interpolation.h  missing_intersection_part.cpp  missing_intersection_part.h  missing_part.cpp  missing_part.h  rigid_transform.cpp  rigid_transform.h  simple_box.cpp  simple_box.h
